test/library/packages/Sort/errors/errors-keyPart.tIntReal.good
errors-keyPart.chpl:9: In function 'main':
errors-keyPart.chpl:17: error: The keyPart method in tIntReal must return a tuple with 2nd element int(?) or uint(?) when used with int(64) elements
